[gd_scene load_steps=2 format=3 uid="uid://pob48yfiub46"]

[ext_resource type="Script" path="res://mod/ecorebirth/scripts/multi_join.gd" id="1_oo7d4"]

[node name="MultiJoin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oo7d4")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "JoinGame"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/OptionBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/OptionBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "IP"
horizontal_alignment = 2
vertical_alignment = 1

[node name="IP" type="LineEdit" parent="CenterContainer/VBoxContainer/OptionBox/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "127.0.0.1"
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/OptionBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/OptionBox/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Port"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Port" type="LineEdit" parent="CenterContainer/VBoxContainer/OptionBox/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "12766"
alignment = 1

[node name="Join" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Join"

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[connection signal="focus_entered" from="CenterContainer/VBoxContainer/OptionBox/HBoxContainer/IP" to="." method="_on_ip_focus_entered"]
[connection signal="text_submitted" from="CenterContainer/VBoxContainer/OptionBox/HBoxContainer/IP" to="." method="_on_ip_text_submitted"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/OptionBox/HBoxContainer2/Port" to="." method="_on_port_focus_entered"]
[connection signal="text_changed" from="CenterContainer/VBoxContainer/OptionBox/HBoxContainer2/Port" to="." method="_on_port_text_changed"]
[connection signal="text_submitted" from="CenterContainer/VBoxContainer/OptionBox/HBoxContainer2/Port" to="." method="_on_port_text_submitted"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Join" to="." method="_on_join_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
